[gd_scene load_steps=4 format=3 uid="uid://11kymu38kk2m"]

[ext_resource type="Theme" uid="uid://b8o36u0dt0fx" path="res://scene/ui/theme/game.tres" id="1_7wyhb"]
[ext_resource type="Script" path="res://scene/ui/card/notification_card.gd" id="2_vhdkg"]
[ext_resource type="PackedScene" uid="uid://cwa3lckf7cpm0" path="res://scene/ui/close_button.tscn" id="3_p8mj5"]

[node name="NotificationCard" type="PanelContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 8.0
grow_horizontal = 2
theme = ExtResource("1_7wyhb")
theme_type_variation = &"CardPanelContainer"
script = ExtResource("2_vhdkg")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_7wyhb")

[node name="CloseButton" parent="VBoxContainer/HBoxContainer" instance=ExtResource("3_p8mj5")]
unique_name_in_owner = true
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_constants/margin_left = 4
theme_override_constants/margin_right = 4

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_7wyhb")
theme_type_variation = &"LabelDark"
text = "NOTIFICATION"

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 2)
layout_mode = 2
size_flags_vertical = 8
theme = ExtResource("1_7wyhb")
value = 50.0
show_percentage = false

[node name="CloseTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 3.0

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/CloseButton" to="." method="_on_close_pressed"]
[connection signal="timeout" from="CloseTimer" to="." method="_on_close_timer_timeout"]
